# fzlvm

./: .gitignore  CMakeLists.txt
include/fzlvm/: instruction.h  repl.h  vm.h
include/fzlvm/handlers/: alu.h  handlers.h  jmp.h
include/fzlvm/registers/: sysflags.h
src/: instruction.cc  vm.cc
src/handlers/: alu.cc  jmp.cc
src/registers/: sysflag.cc
src/repl/: main.cc  utils.cc
tests/: isa_test.cc  jmp_test.cc  vm_test.cc
